# code_linux

./: hh.txt
QtCode/build-addressbook-Desktop_Qt_5_10_0_GCC_64bit-Debug/: Makefile  addressbook  moc_adddialog.cpp  moc_addresswidget.cpp  moc_mainwindow.cpp  moc_newaddresstab.cpp  moc_tablemodel.cpp
c_language/nowCoder/: CMakeLists.txt  main.cpp
clion/socket/: CMakeLists.txt  main.cpp
clion/socket2/: CMakeLists.txt  main.cpp
codeblocks_runing_workspace/others/: array.cpp  bubbom.cpp  compare_str.cpp
makeExamples/ch01-cw1/: lexer.c  (+2 more)
mongoc/: CMakeCache.txt  CMakeLists.txt  hello_mongoc.c
shell/: .sh  on.sh  param.sh
unixEnv/: Makefile
workspace_for_R/: .Rhistory  bayes.Rmd  course25.Rmd
workspace_for_clion/linux/system/: CMakeLists.txt
workspace_for_clion/linux/system/day06/: anon_mmap.cpp  english.txt  error  error.c  fpath.conf.cpp  get_status.c  hello.c  mmap_r_ipc.cpp  mmap_w_ipc.cpp  multi  nmap.cpp  parent_child_mmap.cpp  pipe.cpp  pipe2.cpp  read  read_fifo.c  temp  write
workspace_for_clion/linux/system/demon/: a.out  process_work.cpp  setsid.cpp  temp+++.txt
workspace_for_clion/linux/system/signal/: a.out  alarm_num.cpp  raise.cpp  settitimer.cpp  signal.cpp  signal_set.cpp
workspace_for_clion/linux/system/thread/: condition.c  hh.c  people.dine.c  phtead_join.c  pthread_attr.c  pthread_create.cpp  pthread_exit.c  rwlock.c
workspace_for_codeblocks/: <invalid path>  <invalid path>.layout  exercise6_53  exercise6_53.cpp  functon.cpp  hello  hello.cpp  opengl  opengl.cpp  opengl_1.cpp  random  random.cpp  random2  random2.cpp  wocao.cpp
(+1383 files in other folders)
